WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
93911
AutoTableLayout truncates preferred widths for cells when it needs to ceil them to contain the contents
https://bugs.webkit.org/show_bug.cgi?id=93911
Summary
AutoTableLayout truncates preferred widths for cells when it needs to ceil th...
Levi Weintraub
Reported
2012-08-13 17:02:10 PDT
Repros in various places on Facebook.com
Attachments
Patch
(1.53 MB, patch)
2012-08-13 17:46 PDT
,
Levi Weintraub
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from gce-cr-linux-03
(790.21 KB, application/zip)
2012-08-13 19:06 PDT
,
WebKit Review Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Eric Seidel (no email)
Comment 1
2012-08-13 17:03:22 PDT
our table code needs some no-holds-barred lovin.
Levi Weintraub
Comment 2
2012-08-13 17:46:55 PDT
Created
attachment 158168
[details]
Patch
Eric Seidel (no email)
Comment 3
2012-08-13 17:58:28 PDT
It's hard for me to tell if this is an improvement in the various rendering results.
WebKit Review Bot
Comment 4
2012-08-13 19:06:52 PDT
Comment on
attachment 158168
[details]
Patch
Attachment 158168
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/13488455
New failing tests: svg/zoom/page/zoom-img-preserveAspectRatio-support-1.html svg/zoom/page/zoom-svg-through-object-with-percentage-size.xhtml fast/transforms/bounding-rect-zoom.html tables/mozilla_expected_failures/bugs/
bug89315
.html svg/zoom/page/zoom-replaced-intrinsic-ratio-001.htm
WebKit Review Bot
Comment 5
2012-08-13 19:06:55 PDT
Created
attachment 158188
[details]
Archive of layout-test-results from gce-cr-linux-03 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: gce-cr-linux-03 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.39-gcg-201203291735-x86_64-with-Ubuntu-10.04-lucid
Levi Weintraub
Comment 6
2012-08-13 19:07:42 PDT
(In reply to
comment #3
)
> It's hard for me to tell if this is an improvement in the various rendering results.
A handfull of them are incorrectly wrapping in the current test expectations. A couple are difficult to tell.
Levi Weintraub
Comment 7
2012-08-14 11:14:17 PDT
(In reply to
comment #4
)
> (From update of
attachment 158168
[details]
) >
Attachment 158168
[details]
did not pass chromium-ews (chromium-xvfb): > Output:
http://queues.webkit.org/results/13488455
> > New failing tests: > svg/zoom/page/zoom-img-preserveAspectRatio-support-1.html > svg/zoom/page/zoom-svg-through-object-with-percentage-size.xhtml > fast/transforms/bounding-rect-zoom.html > tables/mozilla_expected_failures/bugs/
bug89315
.html > svg/zoom/page/zoom-replaced-intrinsic-ratio-001.htm
Also, all these tests are marked pass/fail on Linux as part of this change. I find it confounding that the EWS bot seemingly ignores changes to TestExpectations on the test pass! Or, perhaps I'm doing it wrong... Either way, I'm confident this change is for the better. Eric, let me know if you want to discuss :)
Eric Seidel (no email)
Comment 8
2012-08-14 14:46:39 PDT
Comment on
attachment 158168
[details]
Patch OK. Please update your ChangeLog to explain why all these tests are progressions, how they only affect subpixel ports, and how this was a regression from turning on subpixel. Ideally you'd encorporate the cr-linux results, but I understand our tools don't make that easy for you. I guess you're stuck with garden-o-matic for now. :)
Levi Weintraub
Comment 9
2012-08-16 11:15:27 PDT
Comment on
attachment 158168
[details]
Patch Clearing flags.
Levi Weintraub
Comment 10
2012-08-16 11:16:29 PDT
Landed in
http://trac.webkit.org/changeset/125694
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug